C-Lite_IRgen/A4_C327_GROUP2/y.output
State 28 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 229 conflicts: 17 shift/reduce
State 285 conflicts: 17 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_decl
    3                 | translation_unit external_decl

    4 external_decl: function_def
    5              | declaration

    6 function_def: function_header compound_stmt

    7 $@1: ε

    8 function_header: type_spec IDENTIFIER '(' $@1 param_list ')'

    9 $@2: ε

   10 function_header: type_spec IDENTIFIER '(' $@2 ')'

   11 $@3: ε

   12 function_header: storage_class_list type_spec IDENTIFIER '(' $@3 param_list ')'

   13 $@4: ε

   14 function_header: storage_class_list type_spec IDENTIFIER '(' $@4 ')'

   15 param_list: param_decl
   16           | param_list ',' param_decl
   17           | ELLIPSIS
   18           | param_list ',' ELLIPSIS

   19 param_decl: type_spec IDENTIFIER
   20           | type_spec '*' IDENTIFIER
   21           | type_spec IDENTIFIER '[' ']'
   22           | type_spec IDENTIFIER '[' INT_CONST ']'
   23           | type_spec

   24 $@5: ε

   25 declaration: type_spec $@5 declarator_list ';'

   26 $@6: ε

   27 declaration: storage_class_list type_spec $@6 declarator_list ';'
   28            | type_spec ';'
   29            | storage_class_list type_spec ';'

   30 $@7: ε

   31 declaration: TYPEDEF type_spec $@7 declarator_list ';'
   32            | struct_decl ';'
   33            | enum_decl ';'

   34 declarator_list: declarator
   35                | declarator_list ',' declarator

   36 declarator: IDENTIFIER
   37           | IDENTIFIER '=' initializer
   38           | '*' IDENTIFIER
   39           | '*' IDENTIFIER '=' initializer
   40           | IDENTIFIER '[' INT_CONST ']'
   41           | IDENTIFIER '[' ']'
   42           | IDENTIFIER '(' param_list ')'
   43           | IDENTIFIER '(' ')'
   44           | '(' '*' IDENTIFIER ')' '(' param_list ')'
   45           | '(' '*' IDENTIFIER ')' '(' ')'

   46 initializer: assignment_expr
   47            | '{' initializer_list '}'
   48            | '{' initializer_list ',' '}'

   49 initializer_list: initializer
   50                 | initializer_list ',' initializer

   51 type_qualifier: CONST
   52               | VOLATILE

   53 type_spec: INT
   54          | FLOAT
   55          | CHAR
   56          | VOID
   57          | DOUBLE
   58          | SHORT
   59          | LONG
   60          | UNSIGNED
   61          | SIGNED
   62          | type_qualifier type_spec
   63          | SHORT INT
   64          | LONG INT
   65          | LONG DOUBLE
   66          | UNSIGNED INT
   67          | UNSIGNED LONG
   68          | UNSIGNED CHAR
   69          | SIGNED INT
   70          | LONG LONG
   71          | LONG LONG INT
   72          | struct_decl
   73          | enum_decl

   74 storage_class_spec: AUTO
   75                   | REGISTER
   76                   | STATIC
   77                   | EXTERN
   78                   | INLINE

   79 storage_class_list: storage_class_spec
   80                   | storage_class_list storage_class_spec

   81 struct_decl: STRUCT IDENTIFIER '{' member_decl_list '}'
   82            | STRUCT '{' member_decl_list '}'
   83            | STRUCT IDENTIFIER
   84            | UNION IDENTIFIER '{' member_decl_list '}'
   85            | UNION '{' member_decl_list '}'
   86            | UNION IDENTIFIER

   87 member_decl_list: member_decl
   88                 | member_decl_list member_decl

   89 member_decl: type_spec declarator_list ';'
   90            | type_spec ';'

   91 enum_decl: ENUM IDENTIFIER '{' enumerator_list '}'
   92          | ENUM '{' enumerator_list '}'
   93          | ENUM IDENTIFIER

   94 enumerator_list: enumerator
   95                | enumerator_list ',' enumerator

   96 enumerator: IDENTIFIER
   97           | IDENTIFIER '=' INT_CONST

   98 compound_stmt: '{' '}'
   99              | '{' block_item_list '}'

  100 block_item_list: block_item
  101                | block_item_list block_item

  102 block_item: declaration
  103           | stmt

  104 stmt: compound_stmt
  105     | expr_stmt
  106     | selection_stmt
  107     | iteration_stmt
  108     | jump_stmt
  109     | labeled_stmt

  110 expr_stmt: ';'
  111          | expr ';'

  112 selection_stmt: IF '(' expr ')' stmt
  113               | IF '(' expr ')' stmt ELSE stmt

  114 $@8: ε

  115 selection_stmt: SWITCH '(' expr ')' $@8 '{' case_list '}'

  116 case_list: labeled_stmt
  117          | case_list labeled_stmt

  118 case_body_list: ε
  119               | case_body_list non_case_stmt

  120 labeled_stmt: CASE expr ':' case_body_list
  121             | DEFAULT ':' case_body_list

  122 non_case_stmt: compound_stmt
  123              | expr_stmt
  124              | selection_stmt
  125              | iteration_stmt
  126              | jump_stmt

  127 @9: ε

  128 $@10: ε

  129 iteration_stmt: WHILE '(' @9 expr ')' $@10 stmt

  130 @11: ε

  131 iteration_stmt: DO @11 stmt WHILE '(' expr ')' ';'
  132               | FOR '(' expr_stmt expr_stmt ')' stmt
  133               | FOR '(' expr_stmt expr_stmt expr ')' stmt
  134               | FOR '(' declaration expr_stmt ')' stmt
  135               | FOR '(' declaration expr_stmt expr ')' stmt

  136 jump_stmt: RETURN ';'
  137          | RETURN expr ';'
  138          | BREAK ';'
  139          | CONTINUE ';'

  140 expr: assignment_expr
  141     | expr ',' assignment_expr

  142 assignment_expr: conditional_expr
  143                | unary_expr '=' assignment_expr
  144                | unary_expr ASSIGN_OP assignment_expr

  145 conditional_expr: logical_or_expr
  146                 | logical_or_expr '?' expr ':' conditional_expr

  147 logical_or_expr: logical_and_expr

  148 @12: ε

  149 logical_or_expr: logical_or_expr OR_OP @12 logical_and_expr

  150 logical_and_expr: inclusive_or_expr

  151 @13: ε

  152 logical_and_expr: logical_and_expr AND_OP @13 inclusive_or_expr

  153 inclusive_or_expr: exclusive_or_expr
  154                  | inclusive_or_expr '|' exclusive_or_expr

  155 exclusive_or_expr: and_expr
  156                  | exclusive_or_expr '^' and_expr

  157 and_expr: equality_expr
  158         | and_expr '&' equality_expr

  159 equality_expr: relational_expr
  160              | equality_expr EQ_OP relational_expr
  161              | equality_expr NE_OP relational_expr

  162 relational_expr: shift_expr
  163                | relational_expr '<' shift_expr
  164                | relational_expr '>' shift_expr
  165                | relational_expr LE_OP shift_expr
  166                | relational_expr GE_OP shift_expr

  167 shift_expr: additive_expr
  168           | shift_expr LEFT_SHIFT additive_expr
  169           | shift_expr RIGHT_SHIFT additive_expr

  170 additive_expr: multiplicative_expr
  171              | additive_expr '+' multiplicative_expr
  172              | additive_expr '-' multiplicative_expr

  173 multiplicative_expr: unary_expr
  174                    | multiplicative_expr '*' unary_expr
  175                    | multiplicative_expr '/' unary_expr
  176                    | multiplicative_expr '%' unary_expr

  177 unary_expr: postfix_expr
  178           | INC_OP unary_expr
  179           | DEC_OP unary_expr
  180           | '-' unary_expr
  181           | '+' unary_expr
  182           | '!' unary_expr
  183           | '~' unary_expr
  184           | '*' unary_expr
  185           | '&' unary_expr
  186           | SIZEOF unary_expr
  187           | SIZEOF '(' type_spec ')'

  188 postfix_expr: primary_expr
  189             | postfix_expr '[' expr ']'

  190 $@14: ε

  191 postfix_expr: postfix_expr '(' $@14 ')'

  192 $@15: ε

  193 postfix_expr: postfix_expr '(' $@15 arg_list ')'
  194             | postfix_expr '.' IDENTIFIER
  195             | postfix_expr ARROW IDENTIFIER
  196             | postfix_expr INC_OP
  197             | postfix_expr DEC_OP

  198 primary_expr: IDENTIFIER
  199             | INT_CONST
  200             | FLOAT_CONST
  201             | CHAR_CONST
  202             | STRING_LITERAL
  203             | '(' expr ')'

  204 arg_list: assignment_expr
  205         | arg_list ',' assignment_expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 182
    '%' (37) 176
    '&' (38) 158 185
    '(' (40) 8 10 12 14 42 43 44 45 112 113 115 129 131 132 133 134 135 187 191 193 203
    ')' (41) 8 10 12 14 42 43 44 45 112 113 115 129 131 132 133 134 135 187 191 193 203
    '*' (42) 20 38 39 44 45 174 184
    '+' (43) 171 181
    ',' (44) 16 18 35 48 50 95 141 205
    '-' (45) 172 180
    '.' (46) 194
    '/' (47) 175
    ':' (58) 120 121 146
    ';' (59) 25 27 28 29 31 32 33 89 90 110 111 131 136 137 138 139
    '<' (60) 163
    '=' (61) 37 39 97 143
    '>' (62) 164
    '?' (63) 146
    '[' (91) 21 22 40 41 189
    ']' (93) 21 22 40 41 189
    '^' (94) 156
    '{' (123) 47 48 81 82 84 85 91 92 98 99 115
    '|' (124) 154
    '}' (125) 47 48 81 82 84 85 91 92 98 99 115
    '~' (126) 183
    error (256)
    INT (258) 53 63 64 66 69 71
    FLOAT (259) 54
    CHAR (260) 55 68
    VOID (261) 56
    DOUBLE (262) 57 65
    SHORT (263) 58 63
    LONG (264) 59 64 65 67 70 71
    UNSIGNED (265) 60 66 67 68
    SIGNED (266) 61 69
    IF (267) 112 113
    ELSE (268) 113
    FOR (269) 132 133 134 135
    WHILE (270) 129 131
    DO (271) 131
    SWITCH (272) 115
    CASE (273) 120
    DEFAULT (274) 121
    BREAK (275) 138
    CONTINUE (276) 139
    RETURN (277) 136 137
    STRUCT (278) 81 82 83
    TYPEDEF (279) 31
    ENUM (280) 91 92 93
    UNION (281) 84 85 86
    SIZEOF (282) 186 187
    AUTO (283) 74
    CONST (284) 51
    VOLATILE (285) 52
    STATIC (286) 76
    EXTERN (287) 77
    REGISTER (288) 75
    INLINE (289) 78
    IDENTIFIER <str_val> (290) 8 10 12 14 19 20 21 22 36 37 38 39 40 41 42 43 44 45 81 83 84 86 91 93 96 97 194 195 198
    INT_CONST <str_val> (291) 22 40 97 199
    FLOAT_CONST <str_val> (292) 200
    CHAR_CONST <str_val> (293) 201
    STRING_LITERAL <str_val> (294) 202
    ASSIGN_OP <str_val> (295) 144
    ELLIPSIS <str_val> (296) 17 18
    ARROW <str_val> (297) 195
    INC_OP <str_val> (298) 178 196
    DEC_OP <str_val> (299) 179 197
    LEFT_SHIFT (300) 168
    RIGHT_SHIFT (301) 169
    LE_OP (302) 165
    GE_OP (303) 166
    EQ_OP (304) 160
    NE_OP (305) 161
    AND_OP (306) 152
    OR_OP (307) 149
    UMINUS (308)
    UPLUS (309)
    LOWER_THAN_ELSE (310)


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    program <node_idx> (81)
        on left: 1
        on right: 0
    translation_unit <node_idx> (82)
        on left: 2 3
        on right: 1 3
    external_decl <node_idx> (83)
        on left: 4 5
        on right: 2 3
    function_def <node_idx> (84)
        on left: 6
        on right: 4
    function_header <node_idx> (85)
        on left: 8 10 12 14
        on right: 6
    $@1 (86)
        on left: 7
        on right: 8
    $@2 (87)
        on left: 9
        on right: 10
    $@3 (88)
        on left: 11
        on right: 12
    $@4 (89)
        on left: 13
        on right: 14
    param_list <node_idx> (90)
        on left: 15 16 17 18
        on right: 8 12 16 18 42 44
    param_decl <node_idx> (91)
        on left: 19 20 21 22 23
        on right: 15 16
    declaration <node_idx> (92)
        on left: 25 27 28 29 31 32 33
        on right: 5 102 134 135
    $@5 (93)
        on left: 24
        on right: 25
    $@6 (94)
        on left: 26
        on right: 27
    $@7 (95)
        on left: 30
        on right: 31
    declarator_list <node_idx> (96)
        on left: 34 35
        on right: 25 27 31 35 89
    declarator <node_idx> (97)
        on left: 36 37 38 39 40 41 42 43 44 45
        on right: 34 35
    initializer <node_idx> (98)
        on left: 46 47 48
        on right: 37 39 49 50
    initializer_list <node_idx> (99)
        on left: 49 50
        on right: 47 48 50
    type_qualifier <node_idx> (100)
        on left: 51 52
        on right: 62
    type_spec <node_idx> (101)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 8 10 12 14 19 20 21 22 23 25 27 28 29 31 62 89 90 187
    storage_class_spec <node_idx> (102)
        on left: 74 75 76 77 78
        on right: 79 80
    storage_class_list <node_idx> (103)
        on left: 79 80
        on right: 12 14 27 29 80
    struct_decl <node_idx> (104)
        on left: 81 82 83 84 85 86
        on right: 32 72
    member_decl_list <node_idx> (105)
        on left: 87 88
        on right: 81 82 84 85 88
    member_decl <node_idx> (106)
        on left: 89 90
        on right: 87 88
    enum_decl <node_idx> (107)
        on left: 91 92 93
        on right: 33 73
    enumerator_list <node_idx> (108)
        on left: 94 95
        on right: 91 92 95
    enumerator <node_idx> (109)
        on left: 96 97
        on right: 94 95
    compound_stmt <node_idx> (110)
        on left: 98 99
        on right: 6 104 122
    block_item_list <node_idx> (111)
        on left: 100 101
        on right: 99 101
    block_item <node_idx> (112)
        on left: 102 103
        on right: 100 101
    stmt <node_idx> (113)
        on left: 104 105 106 107 108 109
        on right: 103 112 113 129 131 132 133 134 135
    expr_stmt <node_idx> (114)
        on left: 110 111
        on right: 105 123 132 133 134 135
    selection_stmt <node_idx> (115)
        on left: 112 113 115
        on right: 106 124
    $@8 (116)
        on left: 114
        on right: 115
    case_list <node_idx> (117)
        on left: 116 117
        on right: 115 117
    case_body_list <node_idx> (118)
        on left: 118 119
        on right: 119 120 121
    labeled_stmt <node_idx> (119)
        on left: 120 121
        on right: 109 116 117
    non_case_stmt <node_idx> (120)
        on left: 122 123 124 125 126
        on right: 119
    iteration_stmt <node_idx> (121)
        on left: 129 131 132 133 134 135
        on right: 107 125
    @9 (122)
        on left: 127
        on right: 129
    $@10 (123)
        on left: 128
        on right: 129
    @11 (124)
        on left: 130
        on right: 131
    jump_stmt <node_idx> (125)
        on left: 136 137 138 139
        on right: 108 126
    expr <node_idx> (126)
        on left: 140 141
        on right: 111 112 113 115 120 129 131 133 135 137 141 146 189 203
    assignment_expr <node_idx> (127)
        on left: 142 143 144
        on right: 46 140 141 143 144 204 205
    conditional_expr <node_idx> (128)
        on left: 145 146
        on right: 142 146
    logical_or_expr <node_idx> (129)
        on left: 147 149
        on right: 145 146 149
    @12 (130)
        on left: 148
        on right: 149
    logical_and_expr <node_idx> (131)
        on left: 150 152
        on right: 147 149 152
    @13 (132)
        on left: 151
        on right: 152
    inclusive_or_expr <node_idx> (133)
        on left: 153 154
        on right: 150 152 154
    exclusive_or_expr <node_idx> (134)
        on left: 155 156
        on right: 153 154 156
    and_expr <node_idx> (135)
        on left: 157 158
        on right: 155 156 158
    equality_expr <node_idx> (136)
        on left: 159 160 161
        on right: 157 158 160 161
    relational_expr <node_idx> (137)
        on left: 162 163 164 165 166
        on right: 159 160 161 163 164 165 166
    shift_expr <node_idx> (138)
        on left: 167 168 169
        on right: 162 163 164 165 166 168 169
    additive_expr <node_idx> (139)
        on left: 170 171 172
        on right: 167 168 169 171 172
    multiplicative_expr <node_idx> (140)
        on left: 173 174 175 176
        on right: 170 171 172 174 175 176
    unary_expr <node_idx> (141)
        on left: 177 178 179 180 181 182 183 184 185 186 187
        on right: 143 144 173 174 175 176 178 179 180 181 182 183 184 185 186
    postfix_expr <node_idx> (142)
        on left: 188 189 191 193 194 195 196 197
        on right: 177 189 191 193 194 195 196 197
    $@14 (143)
        on left: 190
        on right: 191
    $@15 (144)
        on left: 192
        on right: 193
    primary_expr <node_idx> (145)
        on left: 198 199 200 201 202 203
        on right: 188
    arg_list <node_idx> (146)
        on left: 204 205
        on right: 193 205


State 0

    0 $accept: • program $end

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    AUTO      shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    STATIC    shift, and go to state 17
    EXTERN    shift, and go to state 18
    REGISTER  shift, and go to state 19
    INLINE    shift, and go to state 20

    program             go to state 21
    translation_unit    go to state 22
    external_decl       go to state 23
    function_def        go to state 24
    function_header     go to state 25
    declaration         go to state 26
    type_qualifier      go to state 27
    type_spec           go to state 28
    storage_class_spec  go to state 29
    storage_class_list  go to state 30
    struct_decl         go to state 31
    enum_decl           go to state 32


State 1

   53 type_spec: INT •

    $default  reduce using rule 53 (type_spec)


State 2

   54 type_spec: FLOAT •

    $default  reduce using rule 54 (type_spec)


State 3

   55 type_spec: CHAR •

    $default  reduce using rule 55 (type_spec)


State 4

   56 type_spec: VOID •

    $default  reduce using rule 56 (type_spec)


State 5

   57 type_spec: DOUBLE •

    $default  reduce using rule 57 (type_spec)


State 6

   58 type_spec: SHORT •
   63          | SHORT • INT

    INT  shift, and go to state 33

    $default  reduce using rule 58 (type_spec)


State 7

   59 type_spec: LONG •
   64          | LONG • INT
   65          | LONG • DOUBLE
   70          | LONG • LONG
   71          | LONG • LONG INT

    INT     shift, and go to state 34
    DOUBLE  shift, and go to state 35
    LONG    shift, and go to state 36

    $default  reduce using rule 59 (type_spec)


State 8

   60 type_spec: UNSIGNED •
   66          | UNSIGNED • INT
   67          | UNSIGNED • LONG
   68          | UNSIGNED • CHAR

    INT   shift, and go to state 37
    CHAR  shift, and go to state 38
    LONG  shift, and go to state 39

    $default  reduce using rule 60 (type_spec)


State 9

   61 type_spec: SIGNED •
   69          | SIGNED • INT

    INT  shift, and go to state 40

    $default  reduce using rule 61 (type_spec)


State 10

   81 struct_decl: STRUCT • IDENTIFIER '{' member_decl_list '}'
   82            | STRUCT • '{' member_decl_list '}'
   83            | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    '{'         shift, and go to state 42


State 11

   31 declaration: TYPEDEF • type_spec $@7 declarator_list ';'

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16

    type_qualifier  go to state 27
    type_spec       go to state 43
    struct_decl     go to state 44
    enum_decl       go to state 45


State 12

   91 enum_decl: ENUM • IDENTIFIER '{' enumerator_list '}'
   92          | ENUM • '{' enumerator_list '}'
   93          | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 13

   84 struct_decl: UNION • IDENTIFIER '{' member_decl_list '}'
   85            | UNION • '{' member_decl_list '}'
   86            | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 48
    '{'         shift, and go to state 49


State 14

   74 storage_class_spec: AUTO •

    $default  reduce using rule 74 (storage_class_spec)


State 15

   51 type_qualifier: CONST •

    $default  reduce using rule 51 (type_qualifier)


State 16

   52 type_qualifier: VOLATILE •

    $default  reduce using rule 52 (type_qualifier)


State 17

   76 storage_class_spec: STATIC •

    $default  reduce using rule 76 (storage_class_spec)


State 18

   77 storage_class_spec: EXTERN •

    $default  reduce using rule 77 (storage_class_spec)


State 19

   75 storage_class_spec: REGISTER •

    $default  reduce using rule 75 (storage_class_spec)


State 20

   78 storage_class_spec: INLINE •

    $default  reduce using rule 78 (storage_class_spec)


State 21

    0 $accept: program • $end

    $end  shift, and go to state 50


State 22

    1 program: translation_unit •
    3 translation_unit: translation_unit • external_decl

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    AUTO      shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    STATIC    shift, and go to state 17
    EXTERN    shift, and go to state 18
    REGISTER  shift, and go to state 19
    INLINE    shift, and go to state 20

    $default  reduce using rule 1 (program)

    external_decl       go to state 51
    function_def        go to state 24
    function_header     go to state 25
    declaration         go to state 26
    type_qualifier      go to state 27
    type_spec           go to state 28
    storage_class_spec  go to state 29
    storage_class_list  go to state 30
    struct_decl         go to state 31
    enum_decl           go to state 32


State 23

    2 translation_unit: external_decl •

    $default  reduce using rule 2 (translation_unit)


State 24

    4 external_decl: function_def •

    $default  reduce using rule 4 (external_decl)


State 25

    6 function_def: function_header • compound_stmt

    '{'  shift, and go to state 52

    compound_stmt  go to state 53


State 26

    5 external_decl: declaration •

    $default  reduce using rule 5 (external_decl)


State 27

   62 type_spec: type_qualifier • type_spec

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16

    type_qualifier  go to state 27
    type_spec       go to state 54
    struct_decl     go to state 44
    enum_decl       go to state 45


State 28

    8 function_header: type_spec • IDENTIFIER '(' $@1 param_list ')'
   10                | type_spec • IDENTIFIER '(' $@2 ')'
   25 declaration: type_spec • $@5 declarator_list ';'
   28            | type_spec • ';'

    IDENTIFIER  shift, and go to state 55
    ';'         shift, and go to state 56

    IDENTIFIER  [reduce using rule 24 ($@5)]
    $default    reduce using rule 24 ($@5)

    $@5  go to state 57


State 29

   79 storage_class_list: storage_class_spec •

    $default  reduce using rule 79 (storage_class_list)


State 30

   12 function_header: storage_class_list • type_spec IDENTIFIER '(' $@3 param_list ')'
   14                | storage_class_list • type_spec IDENTIFIER '(' $@4 ')'
   27 declaration: storage_class_list • type_spec $@6 declarator_list ';'
   29            | storage_class_list • type_spec ';'
   80 storage_class_list: storage_class_list • storage_class_spec

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    AUTO      shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    STATIC    shift, and go to state 17
    EXTERN    shift, and go to state 18
    REGISTER  shift, and go to state 19
    INLINE    shift, and go to state 20

    type_qualifier      go to state 27
    type_spec           go to state 58
    storage_class_spec  go to state 59
    struct_decl         go to state 44
    enum_decl           go to state 45


State 31

   32 declaration: struct_decl • ';'
   72 type_spec: struct_decl •

    ';'  shift, and go to state 60

    ';'       [reduce using rule 72 (type_spec)]
    $default  reduce using rule 72 (type_spec)


State 32

   33 declaration: enum_decl • ';'
   73 type_spec: enum_decl •

    ';'  shift, and go to state 61

    ';'       [reduce using rule 73 (type_spec)]
    $default  reduce using rule 73 (type_spec)


State 33

   63 type_spec: SHORT INT •

    $default  reduce using rule 63 (type_spec)


State 34

   64 type_spec: LONG INT •

    $default  reduce using rule 64 (type_spec)


State 35

   65 type_spec: LONG DOUBLE •

    $default  reduce using rule 65 (type_spec)


State 36

   70 type_spec: LONG LONG •
   71          | LONG LONG • INT

    INT  shift, and go to state 62

    $default  reduce using rule 70 (type_spec)


State 37

   66 type_spec: UNSIGNED INT •

    $default  reduce using rule 66 (type_spec)


State 38

   68 type_spec: UNSIGNED CHAR •

    $default  reduce using rule 68 (type_spec)


State 39

   67 type_spec: UNSIGNED LONG •

    $default  reduce using rule 67 (type_spec)


State 40

   69 type_spec: SIGNED INT •

    $default  reduce using rule 69 (type_spec)


State 41

   81 struct_decl: STRUCT IDENTIFIER • '{' member_decl_list '}'
   83            | STRUCT IDENTIFIER •

    '{'  shift, and go to state 63

    $default  reduce using rule 83 (struct_decl)


State 42

   82 struct_decl: STRUCT '{' • member_decl_list '}'

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16

    type_qualifier    go to state 27
    type_spec         go to state 64
    struct_decl       go to state 44
    member_decl_list  go to state 65
    member_decl       go to state 66
    enum_decl         go to state 45


State 43

   31 declaration: TYPEDEF type_spec • $@7 declarator_list ';'

    $default  reduce using rule 30 ($@7)

    $@7  go to state 67


State 44

   72 type_spec: struct_decl •

    $default  reduce using rule 72 (type_spec)


State 45

   73 type_spec: enum_decl •

    $default  reduce using rule 73 (type_spec)


State 46

   91 enum_decl: ENUM IDENTIFIER • '{' enumerator_list '}'
   93          | ENUM IDENTIFIER •

    '{'  shift, and go to state 68

    $default  reduce using rule 93 (enum_decl)


State 47

   92 enum_decl: ENUM '{' • enumerator_list '}'

    IDENTIFIER  shift, and go to state 69

    enumerator_list  go to state 70
    enumerator       go to state 71


State 48

   84 struct_decl: UNION IDENTIFIER • '{' member_decl_list '}'
   86            | UNION IDENTIFIER •

    '{'  shift, and go to state 72

    $default  reduce using rule 86 (struct_decl)


State 49

   85 struct_decl: UNION '{' • member_decl_list '}'

    INT       shift, and go to state 1
    FLOAT     shift, and go to state 2
    CHAR      shift, and go to state 3
    VOID      shift, and go to state 4
    DOUBLE    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    SIGNED    shift, and go to state 9
    STRUCT    shift, and go to state 10
    ENUM      shift, and go to state 12
    UNION     shift, and go to state 13
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16

    type_qualifier    go to state 27
    type_spec         go to state 64
    struct_decl       go to state 44
    member_decl_list  go to state 73
    member_decl       go to state 66
    enum_decl         go to state 45


State 50

    0 $accept: program $end •

    $default  accept


State 51

    3 translation_unit: translation_unit external_decl •

    $default  reduce using rule 3 (translation_unit)


State 52

   98 compound_stmt: '{' • '}'
   99              | '{' • block_item_list '}'

    INT             shift, and go to state 1
    FLOAT           shift, and go to state 2
    CHAR            shift, and go to state 3
    VOID            shift, and go to state 4
    DOUBLE          shift, and go to state 5
    SHORT           shift, and go to state 6
    LONG            shift, and go to state 7
    UNSIGNED        shift, and go to state 8
    SIGNED          shift, and go to state 9
    IF              shift, and go to state 74
    FOR             shift, and go to state 75
    WHILE           shift, and go to state 76
    DO              shift, and go to state 77
    SWITCH          shift, and go to state 78
    CASE            shift, and go to state 79
    DEFAULT         shift, and go to state 80
    BREAK           shift, and go to state 81
    CONTINUE        shift, and go to state 82
    RETURN          shift, and go to state 83
    STRUCT          shift, and go to state 10
    TYPEDEF         shift, and go to state 11
    ENUM            shift, and go to state 12
    UNION           shift, and go to state 13
    SIZEOF          shift, and go to state 84
    AUTO            shift, and go to state 14
    CONST           shift, and go to state 15
    VOLATILE        shift, and go to state 16
    STATIC          shift, and go to state 17
    EXTERN          shift, and go to state 18
    REGISTER        shift, and go to state 19
    INLINE          shift, and go to state 20
    IDENTIFIER      shift, and go to state 85
    INT_CONST       shift, and go to state 86
    FLOAT_CONST     shift, and go to state 87
    CHAR_CONST      shift, and go to state 88
    STRING_LITERAL  shift, and go to state 89
    INC_OP          shift, and go to state 90
    DEC_OP          shift, and go to state 91
    '&'             shift, and go to state 92
    '+'             shift, and go to state 93
    '-'             shift, and go to state 94
    '*'             shift, and go to state 95
    '!'             shift, and go to state 96
    '~'             shift, and go to state 97
    '('             shift, and go to state 98
    ';'             shift, and go to state 99
    '{'             shift, and go to state 52
    '}'             shift, and go to state 100

    declaration          go to state 101
    type_qualifier       go to state 27
    type_spec            go to state 102
    storage_class_spec   go to state 29
    storage_class_list   go to state 103
    struct_decl          go to state 31
    enum_decl            go to state 32
    compound_stmt        go to state 104
    block_item_list      go to state 105
    block_item           go to state 106
    stmt                 go to state 107
    expr_stmt            go to state 108
    selection_stmt       go to state 109
    labeled_stmt         go to state 110
    iteration_stmt       go to state 111
    jump_stmt            go to state 112
    expr                 go to state 113
    assignment_expr      go to state 114
    conditional_expr     go to state 115
    logical_or_expr      go to state 116
    logical_and_expr     go to state 117
    inclusive_or_expr    go to state 118
    exclusive_or_expr    go to state 119
    and_expr             go to state 120
    equality_expr        go to state 121
    relational_expr      go to state 122
    shift_expr           go to state 123
    additive_expr        go to state 124
    multiplicative_expr  go to state 125
    unary_expr           go to state 126
    postfix_expr         go to state 127
    primary_expr         go to state 128


State 53

    6 function_def: function_header compound_stmt •

    $default  reduce using rule 6 (function_def)


State 54

   62 type_spec: type_qualifier type_spec •

    $default  reduce using rule 62 (type_spec)


State 55

    8 function_header: type_spec IDENTIFIER • '(' $@1 param_list ')'
   10                | type_spec IDENTIFIER • '(' $@2 ')'

    '('  shift, and go to state 129


State 56

   28 declaration: type_spec ';' •

    $default  reduce using rule 28 (declaration)


State 57

   25 declaration: type_spec $@5 • declarator_list ';'

    IDENTIFIER  shift, and go to state 130
    '*'         shift, and go to state 131
    '('         shift, and go to state 132

    declarator_list  go to state 133
    declarator       go to state 134


State 58

   12 function_header: storage_class_list type_spec • IDENTIFIER '(' $@3 param_list ')'
   14                | storage_class_list type_spec • IDENTIFIER '(' $@4 ')'
   27 declaration: storage_class_list type_spec • $@6 declarator_list ';'
   29            | storage_class_list type_spec • ';'

    IDENTIFIER  shift, and go to state 135
    ';'         shift, and go to state 136

    IDENTIFIER  [reduce using rule 26 ($@6)]
    $default    reduce using rule 26 ($@6)

    $@6  go to state 137


State 59

   80 storage_class_list: storage_class_list storage_class_spec •

    $default  reduce using rule 80 (storage_class_list)


State 60

   32 declaration: struct_decl ';' •
